# smsbackend

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  stroks.py  tree.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 16923798b42e_add_password_hash_column.py  365896b205c5_add_password_hash_column.py  69f680c9416d_test.py  8925fe99ae0a_kek.py  bb9e1ade4f4a_add_password_hash_column.py
scripts/: alembic_genetare.py
src/: main.py
src/core/: app.py  config.py  logging_config.py
src/core/di/: __init__.py  repository.py  service.py
src/core/domain/dto/: history_dto.py  (+4 more)
src/core/exceptions/: exceptions.py
src/infrastructure/database/: base.py  connection.py  init_db.py  schemas.py
src/infrastructure/repository/: __init__.py  country_repository.py  order_repository.py  payment_repository.py  price_repository.py  provider_repository.py  provider_route_repository.py  service_repository.py  status_type_repository.py  user_repository.py
src/presentation/: webhooks.py
src/presentation/api/: __init__.py
src/restfastapitemplate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: JWT_service.py  haser_service.py  heleket_service.py  order_service.py  payment_service.py  price_service.py  user_service.py
tests/: conftest.py  pytest.ini
tests/integration/: test_integeration_user_api.py  test_payment_endpoints.py  test_user_api.py  test_webhooks.py
tests/k6/: k6_user_users_test.js
tests/mocks/: payment_mocks.py
tests/unit/: test_user_api.py  test_user_service.py
(+21 files in other folders)
