[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restfastapitemplate"
version = "0.0.1"
description = "FastAPI REST template"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=2.0.0",
    "aiomysql",
    "sqlalchemy>=2.0.0",
    "python-dotenv"
]


[project.optional-dependencies]
dev = [
    "pytest[asyncio]>=6.0",
    "aiosqlite",
    "httpx"
]
